Fixed overflow bug
Fixed a bug in our data table.

--- a/Admin-Frontend/src/app/data-table/data-table.component.scss
+++ b/Admin-Frontend/src/app/data-table/data-table.component.scss
@@ -15,6 +15,10 @@ img {
   background-color: #fafafa;
 }
 
+.mat-cell, mat-footer-cell, mat-header-cell{
+  overflow: visible;
+}
+
 .table-paginator{
   padding-bottom: 64px;
 }
